vfpl_parser/src/snapshots/vfpl_parser__test__ident_cond_keyword_literal.snap
---
source: vfpl_parser/src/test.rs
expression: parsed

---
Ok(
    Literal(
        Literal {
            span: Span {
                start: 0,
                end: 0,
            },
            kind: Ident(
                "from",
            ),
        },
    ),
)
