vfpl_parser/src/snapshots/vfpl_parser__test__ident_ty.snap
---
source: vfpl_parser/src/test.rs
expression: parsed

---
Ok(
    Ty {
        span: Span {
            start: 0,
            end: 0,
        },
        kind: Name(
            "Test",
        ),
    },
)
