vfpl_parser/src/snapshots/vfpl_parser__test__if_empty_body_true_cond.snap
---
source: vfpl_parser/src/test.rs
expression: parsed

---
Ok(
    If {
        span: Span {
            start: 0,
            end: 0,
        },
        if_part: IfPart {
            span: Span {
                start: 0,
                end: 0,
            },
            cond: Literal(
                Literal {
                    span: Span {
                        start: 0,
                        end: 0,
                    },
                    kind: True,
                },
            ),
            body: Body {
                span: Span {
                    start: 0,
                    end: 0,
                },
                stmts: [],
            },
            else_part: None,
        },
    },
)
