vfpl_parser/src/snapshots/vfpl_parser__test__if_multi_stmt_body.snap
---
source: vfpl_parser/src/test.rs
expression: parsed

---
Ok(
    If {
        span: Span {
            start: 0,
            end: 0,
        },
        if_part: IfPart {
            span: Span {
                start: 0,
                end: 0,
            },
            cond: Comparison(
                Comparison {
                    span: Span {
                        start: 0,
                        end: 0,
                    },
                    lhs: Literal(
                        Literal {
                            span: Span {
                                start: 0,
                                end: 0,
                            },
                            kind: True,
                        },
                    ),
                    rhs: Literal(
                        Literal {
                            span: Span {
                                start: 0,
                                end: 0,
                            },
                            kind: Absent,
                        },
                    ),
                    kind: Eq,
                },
            ),
            body: Body {
                span: Span {
                    start: 0,
                    end: 0,
                },
                stmts: [
                    Terminate(
                        Terminate {
                            span: Span {
                                start: 0,
                                end: 0,
                            },
                        },
                    ),
                    Expr(
                        ArithmeticOp(
                            ArithmeticOp {
                                span: Span {
                                    start: 0,
                                    end: 0,
                                },
                                lhs: Literal(
                                    Literal {
                                        span: Span {
                                            start: 0,
                                            end: 0,
                                        },
                                        kind: Int(
                                            5,
                                        ),
                                    },
                                ),
                                rhs: Literal(
                                    Literal {
                                        span: Span {
                                            start: 0,
                                            end: 0,
                                        },
                                        kind: Ident(
                                            "A",
                                        ),
                                    },
                                ),
                                kind: Add,
                            },
                        ),
                    ),
                ],
            },
            else_part: None,
        },
    },
)
